[project]
name = "aztec_code_generator"
description = "Aztec Code generator in Python"
version = "0.11"
license = "MIT"
readme = "README.md"
requires-python = ">=3.7"
authors=[{name='Dmitry Alimov', email='dvalimov@gmail.com'}]
maintainers=[{ name='Daniel Lenski', email='dlenski@gmail.com'}]

[build-system]
requires = [
    "uv_build>=0.11.6,<0.12",
]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "aztec_code_generator"
module-root = ""

[project.urls]
Homepage = "https://github.com/dlenski/aztec_code_generator"

[dependency-groups]
dev = [
    "pillow>=8.0",
    "zxing>=0.13",
    "flake8>=5.0.4",
    "pytest>=7.4.4",
]
