[project]
name = "aztec_code_generator"
description = "Aztec Code generator in Python"
version = "0.11.1"
license = "MIT"
readme = "README.md"
requires-python = ">=3.7"
authors=[{name='Dmitry Alimov', email='dvalimov@gmail.com'}]
maintainers=[{ name='Daniel Lenski', email='dlenski@gmail.com'}]

[build-system]
requires = [
    "uv_build>=0.11.6,<0.12",
]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "aztec_code_generator"
module-root = ""

[project.urls]
Homepage = "https://github.com/dlenski/aztec_code_generator"

[project.optional-dependencies]
Image = [
  "pillow>=8.0",
]

[dependency-groups]
dev = [
    "pillow>=8.0",
    "pyrxing>=0.2.0; python_version >= '3.8'",
    "flake8>=5.0.4",
    "pytest>=7.4.4",
    "cairosvg>=2.7.1",
]
